Bug 102621 - DOCX import: Chart with Empty Data Incorrectly Imported
Summary: DOCX import: Chart with Empty Data Incorrectly Imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords: filter:docx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2016-09-27 09:17 UTC by Atlant
Modified: 2016-12-04 10:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test file from Word ( with diagram Excel) 2007 (17.83 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2016-09-30 07:58 UTC, Atlant
Details
how it looks in Word 2007 (44.35 KB, image/jpeg)
2016-09-30 08:42 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Atlant 2016-09-27 09:17:08 UTC
Import from DOCX with diagram[3 line with categories] based on the table:

YEARS    , Line_1, Line_2, Line_3   

2005 year, 0.1   ,EMPTY , EMPTY
2006 year, 0.2   ,EMPTY , EMPTY
2007 year, 0.4   , 0.2  , EMPTY
2008 year, 0.1   , 0.4  , EMPTY
2009 year, -0.5  , 0.1  , 0.8
2010 year, -0.4  ,-0.0  , 1.2

EMPTY == empty string


After import, diagram view as table

YEARS    , Line_1, Line_2, Line_3   

2005 year, 0.1   , 0.2  , 0.8
2006 year, 0.2   , 0.4  , 1.2
2007 year, 0.4   , 0.1  , EMPTY
2008 year, 0.1   ,-0.0  , EMPTY
2009 year, -0.5  , EMPTY, EMPTY
2010 year, -0.4  , EMPTY, EMPTY

Column lines begines with  two,three and above categories shifted to UP!

I can't make an example of the file NOW as I have no MS Office

P.S. I apologize for bad English
Comment 1 Xisco Faulí 2016-09-29 11:36:49 UTC
Could you please attach a file containing the described problem?
Comment 2 Atlant 2016-09-30 07:58:29 UTC
Created attachment 127738 [details]
test file from Word ( with diagram Excel) 2007

this file is example of bug
Comment 3 Xisco Faulí 2016-09-30 08:42:45 UTC
Created attachment 127739 [details]
how it looks in Word 2007

Confirmed in 

Version: 5.3.0.0.alpha0+
Build ID: 0d3ba1d4b507b555b086c687fcd202d69a9a2ffa
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 4 Xisco Faulí 2016-09-30 08:45:01 UTC
Reproduced in

Version: 4.2.0.0.alpha1+
Build ID: fc8f44e82de4ebdd50ac5fbb9207cd1a59a927e3
Comment 5 Luke 2016-11-26 22:06:57 UTC
Jean-Tiare,
Is this related to what you worked on?
Comment 6 Jean-Tiare LE BIGOT 2016-11-26 22:43:30 UTC
@Luke: this looks typically like the symptoms of the bug before my patch. For once, it does not look like a regression :)

@Atlant, by any chance, could you try with a nighly build ? I think yo may grab one here http://dev-builds.libreoffice.org/daily/master/
Comment 7 Luke 2016-11-27 04:39:51 UTC
Jean-Tiare,
I could still reproduce this on Version: 5.4.0.0.alpha0+ (x64)
Build ID: 7b250d56981f78e77454a2a3fd670731b2358e75

The data table show empty being converted to zero. I could recreate this with Word, but the same table in Excel was correctly imported by Calc. Any idea what's going on here?
Comment 8 Jean-Tiare LE BIGOT 2016-11-27 22:56:30 UTC
Hmmm, I see. We should store "NaN" instead of 0. I see What I can do If I have some time this week.
Comment 9 Jean-Tiare LE BIGOT 2016-11-28 08:12:17 UTC
Should be fixed in https://gerrit.libreoffice.org/31303.
Comment 10 Atlant 2016-11-28 08:17:15 UTC
Thank You for correction!
We wait for release.
Comment 11 Commit Notification 2016-12-01 17:33:19 UTC
Jean-Tiare Le Bigot committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=18b3138a7ac4da823e41640bed8a4707029b8fb0

tdf#102621: import empty chart cells as NaN instead of 0

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Luke 2016-12-04 10:06:28 UTC
Verified fixed in Version: 5.4.0.0.alpha0+
Build ID: 17773e1a8dd6e97f57db111819338c418f819cef

This is a great improvement. Thank you Jean-Tiare!